--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "embla-carousel-react": "8.5.1",
-    
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
@@ -70,7 +69,6 @@
     "react-dom": "^18",
     "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.1",
-    
     "react-resizable-panels": "^2.1.7",
     "react-youtube": "latest",
     "recharts": "latest",
@@ -89,6 +87,8 @@
     "@types/react-dom": "^18.3.7",
     "@types/react-youtube": "^7.6.2",
     "drizzle-kit": "^0.31.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^16.0.3",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
