--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.25",
     "next-auth": "^5.0.0-beta.30",
@@ -67,9 +68,9 @@
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
-    "react-is": "^18.2.0",
     "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.1",
+    "react-is": "^18.2.0",
     "react-resizable-panels": "^2.1.7",
     "react-youtube": "latest",
     "recharts": "latest",
