--- a/package.json
+++ b/package.json
@@ -58,9 +58,10 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
+    "howler": "^2.2.4",
     "input-otp": "1.4.1",
     "lodash": "^4.17.21",
-    "lottie-web": "^5.13.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.25",
     "next-auth": "^5.0.0-beta.30",
@@ -82,6 +83,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.12",
     "@types/istanbul-lib-report": "^3.0.3",
     "@types/istanbul-reports": "^3.0.4",
     "@types/node": "^22.19.1",
