--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-three/drei": "^9.108.3",
     "@react-three/fiber": "^8.16.8",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/lodash": "^4.17.20",
     "@types/react-grid-layout": "^1.3.6",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
